--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dotenv": "^2.0.0",
     "express": "~4.13.1",
     "morgan": "~1.6.1",
-    "pg": "^4.5.1",
+    "pg-promise": "^3.2.6",
     "serve-favicon": "~2.3.0",
     "swig": "^1.4.2"
   },
